raw/NAUFAL ASWITA AMANULLAH MUHAMMAD 6420 245150207111060/2024-11-14-08-32-14.ceg/compilation.txt
NT.java:35: error: cannot find symbol
		int akhir=bagi/2;
		          ^
  symbol:   variable bagi
  location: class NT
1 error
Not compiled
